# fyler

./: .eslintcache  .gitignore  .impeccable.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  eslint.config.js  index.html  knip.json  package.json  pnpm-lock.yaml  theming.md  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: architecture.md  design-system.md  frontend-architecture.md  frontend-audit-tracker.md  frontend-testing.md  pdf-export.md  theming.md  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.standalone.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  export.rs  lib.rs  main.rs  models.rs  optimize.rs  pdf.rs  settings.rs  source_registry.rs  vo.rs
src-tauri/src/commands/: export.rs  sources.rs  support.rs
src-tauri/src/export/: compose.rs  plan.rs  progress.rs  source_cache.rs  tests.rs
src-tauri/src/optimize/: analysis.rs  candidate.rs  mod.rs  plan.rs  raster.rs  rewrite.rs  runner.rs  tests.rs
src-tauri/src/optimize/analysis/: resources.rs  transform.rs  walker.rs
src-tauri/src/pdf/: image_page.rs  kind.rs  layout.rs  metadata.rs  mod.rs  rotate.rs  tests.rs
src-tauri/src/pdf_compose/: composer.rs  mod.rs  object_copier.rs  page_effective.rs  resources.rs
src-tauri/src/pdf_image/: descriptor.rs  encode.rs  mod.rs  policy.rs
src-tauri/src/source_registry/: import.rs  mod.rs  preview.rs  registry.rs  source_format.rs  source_registration.rs  tests.rs
src-tauri/src/source_registry/tests/: import.rs  mod.rs  preview.rs  protected_pdf.rs  registry.rs
(+653 files in other folders)
