[package]
name = "fyler"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fyler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.40"
uuid = { version = "1", features = ["v4"] }
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "qoi", "tga", "tiff", "webp"] }
anyhow = "1"
thiserror = "2"
rayon = "1"
fast_image_resize = { version = "6", default-features = false, features = ["rayon"] }
jpeg-decoder = { version = "0.3", default-features = false }
jpeg-encoder = { version = "0.7", default-features = false, features = ["std"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
